--- a/docker/serve/Dockerfile
+++ b/docker/serve/Dockerfile
@@ -8,6 +8,12 @@ ARG MMSEG="0.24.1"
 
 ENV PYTHONUNBUFFERED TRUE
 
+# -- Run to avoid GPG error --
+RUN rm /etc/apt/sources.list.d/cuda.list
+RUN rm /etc/apt/sources.list.d/nvidia-ml.list
+# ----------------------------
+# (from https://github.com/NVIDIA/nvidia-docker/issues/1632)
+
 RUN apt-get update && \
     DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
     ca-certificates \
@@ -38,12 +44,51 @@ RUN chmod +x /usr/local/bin/entrypoint.sh \
     && chown -R model-server /home/model-server
 
 COPY config.properties /home/model-server/config.properties
-RUN mkdir /home/model-server/model-store && chown -R model-server /home/model-server/model-store
+RUN mkdir /home/model-server/model-store 
+
+# -- Clone modified repository and model files --
+WORKDIR /home
+RUN git clone https://github.com/GabrielvanderSchmidt/SegNeXt.git
+# To use Cityscapes:
+RUN apt-get install wget \
+    && wget https://cloud.tsinghua.edu.cn/f/b5308d092b034f81aac0/?dl=1 \
+    && mv segnext_large_1024x1024_city_160k.pth /home/model-server/model-store/city-model.pth \
+    && mv SegNeXt/local_configs/segnext/large/segnext.large.1024x1024.city.160k.py /home/model-server/model-store/city-configs.py
+# Or, to use ADE20K:
+#RUN apt-get install wget \
+#    && wget https://cloud.tsinghua.edu.cn/f/d4f8e1020643414fbf7f/?dl=1 \
+#    && mv segnext_large_512x512_ade_160k.pth /home/model-server/model-store/ade-model.pth \
+#    && mv SegNeXt/local_configs/segnext/large/segnext.large.512x512.ade.160k.py /home/model-server/model-store/ade-configs.py
+# -----------------------------------------------
+
+# -- Move SegNeXt/configs/_base_/ to /home/_base_ --
+RUN mv SegNeXt/configs/_base_/ /home/_base_/
+# Anything else that needs to be moved?
+# --------------------------------------------------
+
+# -- Create .mar file -- (WIP) 
+# docker exec -it segnext-serve bash
+# python SegNeXt/tools/torchserve/mmseg2torchserve.py \
+#    --config "/home/model-server/model-store/city-configs.py" \
+#    --checkpoint "/home/model-server/model-store/ade-model.pth" \
+#    --output-folder "/home/model-server/model-store/" \
+#    --model-name segnext-city
+# ----------------------
+
+RUN chown -R model-server /home/model-server/model-store
 
 EXPOSE 8080 8081 8082
 
 USER model-server
 WORKDIR /home/model-server
 ENV TEMP=/home/model-server/tmp
+
+# -- Added to (hopefully) run only on CPU --
+RUN export FORCE_CUDA=0
+RUN export CUDA_VISIBLE_DEVICES=""
+# When working with SegNeXt through Docker/Torchserve, use CUDA_VISIBLE_DEVICES="" (according to StackOverflow) or CUDA_VISIBLE_DEVICES=-1 (according to SegNeXt's GitHub page).
+# When running it directly, run with --device cpu option.
+# ------------------------------------------
+ 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 CMD ["serve"]
