Updated Dockerfile (still fixing errors...).

--- a/docker/serve/Dockerfile
+++ b/docker/serve/Dockerfile
@@ -14,8 +14,9 @@ RUN rm /etc/apt/sources.list.d/nvidia-ml.list
 # ----------------------------
 # (from https://github.com/NVIDIA/nvidia-docker/issues/1632)
 
-RUN apt-get update && \
-    DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
+RUN apt-get update \
+    && apt-get install wget -y \
+    && DEBIAN_FRONTEND=noninteractive apt-get install --no-install-recommends -y \
     ca-certificates \
     g++ \
     openjdk-11-jre-headless \
@@ -50,13 +51,12 @@ RUN mkdir /home/model-server/model-store
 WORKDIR /home
 RUN git clone https://github.com/GabrielvanderSchmidt/SegNeXt.git
 # To use Cityscapes:
-RUN apt-get install wget \
-    && wget https://cloud.tsinghua.edu.cn/f/b5308d092b034f81aac0/?dl=1 \
+RUN wget --no-verbose https://cloud.tsinghua.edu.cn/seafhttp/files/88640cd3-5cf0-45dd-b15b-b144617b9fd9/segnext_large_1024x1024_city_160k.pth \
     && mv segnext_large_1024x1024_city_160k.pth /home/model-server/model-store/city-model.pth \
     && mv SegNeXt/local_configs/segnext/large/segnext.large.1024x1024.city.160k.py /home/model-server/model-store/city-configs.py
 # Or, to use ADE20K:
 #RUN apt-get install wget \
-#    && wget https://cloud.tsinghua.edu.cn/f/d4f8e1020643414fbf7f/?dl=1 \
+#    && wget https://cloud.tsinghua.edu.cn/f/d4f8e1020643414fbf7f/?dl=1 \ # <- wrong link, this will download index.html
 #    && mv segnext_large_512x512_ade_160k.pth /home/model-server/model-store/ade-model.pth \
 #    && mv SegNeXt/local_configs/segnext/large/segnext.large.512x512.ade.160k.py /home/model-server/model-store/ade-configs.py
 # -----------------------------------------------
